--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="social-container">
         <div class="social-text">Follow for updates</div>
         <div class="social-icons">
-            <a href="#" aria-label="X (Twitter)"><img src="https://about.x.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.1920.png" alt="X" class="social-icon"></a>
+            <a href="https://x.com/jasonforreels/" aria-label="X (Twitter)"><img src="https://about.x.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.1920.png" alt="X" class="social-icon"></a>
             <a href="https://www.instagram.com/jasonforreels/" aria-label="Instagram"><img src="https://i.ibb.co/W45m5nvn/instagram.png" alt="Instagram" class="social-icon"></a>
             <a href="#" aria-label="Discord"><img src="https://i.ibb.co/0yDssSqc/pngimg-com-discord-PNG3.png" alt="Discord" class="social-icon"></a>
         </div>
